Bonus section added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+     
     <section class="dFlex">
         <div class="container">
             <div>
@@ -67,13 +68,23 @@
     <section class="dFlex">
         <div id="knowGlobal">
             <h2>Know our <br> global community</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium magnam dicta obcaecati magni qui quo vel dolorem at et harum.</p>
-            <button class="btn">Read the Documantation</button>
+            <p>We have a big community with skilled persons. Here you can see professional web developers all around the world. Join our community to gain new knowledge. </p>
+            <button class="btn">Read the Documentation</button>
         </div>
         <div id="globalImg"> 
             <img src="./images/pictures/project.png" alt="project" >
         </div>
     </section>
+
+<!-- Bonus Mark's section -->
+<section id="ourWork">
+<h3>Let's Explore Some of <span style="color: rgb(198, 28, 204);"> Our Creation</span></h3>
+<div class="dFlex">
+    <img src="./images/bonusPic/temp2.jpeg" alt="Demo  website ">
+    <img src="./images/bonusPic/temp3.jpg" alt="Demo  website ">
+    <img src="./images/bonusPic/temp4.png" alt="Demo  website ">
+</div>
+</section>
     <section id="footer">
 <div>
     <h2>Mission <span>2022</span> </h2>
