Ready fore Submit

--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Mission2022</title>
 </head>
 
 <body>
-     
+
     <section class="dFlex">
         <div class="container">
             <div>
-                <div style="line-height: 16px;">
+                <div id="header">
                     <h1>Stay Focused on</h1>
                     <h2> Mission 2022</h2>
                 </div>
-                <p>This year will be best for all of us. Exploring should be the main goal for this year. New technology
-                    brings a new experience. So, keep exploring. </p>
+                <p>This year will be best for all of us. Exploring should be the main goal for this year. New technology brings a new experience. So, keep exploring. </p>
             </div>
             <button class="btn">Let's Explore</button>
             <p>Scroll down to explore more about us</p>
@@ -31,37 +30,36 @@
             <img src="./images/person/person-4.png" alt="Author's picture">
         </div>
     </section>
+    <!-- Cart section staring here -->
     <section id="secondSec">
-        <h4 id="myMission">My mission in <span>2022</span></h4>
-
+        <h4 id="myMission">My Mission in <span>2022</span></h4>
         <div class="dFlex">
             <div class="myMissionCart" id="mission">
-                <img src="./images/illustrators/illustrator-1.png" alt="">
+                <img src="./images/illustrators/illustrator-1.png" alt="mission image">
                 <h5> Mission </h5>
                 <p>This year I will explore some amazing technology. such as React, node js, MongoDB, etc. </p>
             </div>
-            <div class="myMissionCart" id="vission">
-                <img src="./images/illustrators/illustrator-2.png" alt="">
+            <div class="myMissionCart" id="vision">
+                <img src="./images/illustrators/illustrator-2.png" alt="vision image">
                 <h5>Vision</h5>
                 <p> I have to be a full-stack web developer. I will sacrifice my playing, gossiping with friends. </p>
-
             </div>
             <div class="myMissionCart" id="goal">
-                <img src="./images/illustrators/illustrator-3.png" alt="">
+                <img src="./images/illustrators/illustrator-3.png" alt=" goal image">
                 <h5>Goals</h5>
                 <p> For any, how I have to complete web development course and I have to be a web developer </p>
             </div>
         </div>
     </section>
+    <!-- Develop section starting from here -->
     <section class="dFlex" id="thirdSec">
         <div id="codingImg">
             <img src="./images/pictures/coding.png" alt="coding">
         </div>
         <div id="develop">
             <h2 style="font-size: 2rem;"> Develop <br> Without Limits</h2>
-            <p> While working on a project our first thinking is to complete the project with 100% accuracy. We build
-                a website fast & it works faster Without any bugs. If you want to know about our policy, please read the
-                documentation</p>
+            <p> While working on a project our first thinking is to complete the project with 100% accuracy. We build a website fast & it works faster Without any bugs. If you want to know about our policy, please read the documentation
+            </p>
             <button class="btn">Read the Documentation</button>
         </div>
     </section>
@@ -71,25 +69,26 @@
             <p>We have a big community with skilled persons. Here you can see professional web developers all around the world. Join our community to gain new knowledge. </p>
             <button class="btn">Read the Documentation</button>
         </div>
-        <div id="globalImg"> 
-            <img src="./images/pictures/project.png" alt="project" >
+        <div id="globalImg">
+            <img src="./images/pictures/project.png" alt="project">
         </div>
     </section>
 
-<!-- Bonus Mark's section -->
-<section id="ourWork">
-<h3>Let's Explore Some of <span style="color: rgb(198, 28, 204);"> Our Creation</span></h3>
-<div class="dFlex">
-    <img src="./images/bonusPic/temp2.jpeg" alt="Demo  website ">
-    <img src="./images/bonusPic/temp3.jpg" alt="Demo  website ">
-    <img src="./images/bonusPic/temp4.png" alt="Demo  website ">
-</div>
-</section>
+    <!-- bonus mark's section starting from here -->
+    <section id="ourWork">
+        <h3>Let's Explore Some of <span style="color: rgb(198, 28, 204);"> Our Creation</span></h3>
+        <div class="dFlex">
+            <img src="./images/bonusPic/temp2.jpeg" alt="Demo  website ">
+            <img src="./images/bonusPic/temp3.jpg" alt="Demo  website ">
+            <img src="./images/bonusPic/temp4.png" alt="Demo  website ">
+        </div>
+    </section>
+    <!-- footer section staring from here -->
     <section id="footer">
-<div>
-    <h2>Mission <span>2022</span> </h2>
-    <small>Hard work, Perseverance and Determination for 2022 &copy;Sabbir alam Pial</small>
-</div>
+        <div>
+            <h2>Mission <span>2022</span> </h2>
+            <small>Hard work, Perseverance and Determination for 2022 &copy;Sabbir alam Pial</small>
+        </div>
     </section>
 </body>
 
